Many changes... Still far from complete

--- a/jstu4/jstu4.html
+++ b/jstu4/jstu4.html
@@ -4,13 +4,28 @@
 		<title></title>
         <link rel="stylesheet" href="jstu4.css"/>
         <script src="jquery-1.6.4.js"></script>
+        <script src="jquery-plugins.js"></script>
         <script src="hotmilk.browser.jquery.js"></script>
+        <script src="i18n.js"></script>
 		<script src="tu4.js"></script>
-		<script src="i18n.js"></script>
-        <script src="main.js"></script>
+        <script src="ui.js"></script>
 	</head>
 	<body>
-		<div class="edit tape" contentEditable="true"></div>
-		<div class="edit program" contentEditable="true"></div>
+        <div class="wrapper">
+            <h1><span class="title"></span> <a class="button" id="btn-help" href="#"></a></h1>
+            <input class="wide-block mode-edit mode-error tape" id="input-tape"/>
+            <div class="wide-block mode-run tape" id="display-tape"></div>
+            <div class="controls">
+                <a class="button mode-edit" id="btn-start" href="#"></a>
+                <a class="button mode-edit" id="btn-totu4" href="#"></a>
+                <a class="button mode-run" id="btn-step" href="#"></a>
+                <a class="button mode-run" id="btn-quick" href="#"></a>
+                <a class="button mode-run mode-error" id="btn-edit" href="#"></a>
+                <a class="button mode-run" id="btn-unmark" href="#"></a>
+                <span class="log"></span>
+            </div>
+            <textarea class="wide-block mode-edit program" id="input-program"></textarea>
+            <div class="wide-block mode-run mode-error program" id="display-program"></div>
+        </div>
 	</body>
 </html>
