--- a/jstu4/jstu4.html
+++ b/jstu4/jstu4.html
@@ -13,7 +13,7 @@
 	<body>
         <div class="wrapper">
             <h1><span class="title"></span> <a class="button" id="btn-help" href="#"></a></h1>
-            <input class="wide-block mode-edit mode-error tape" id="input-tape"/>
+            <input class="wide-block mode-edit mode-error tape" id="input-tape" tabindex="1"/>
             <div class="wide-block mode-run tape" id="display-tape"></div>
             <div class="controls">
                 <a class="button mode-edit" id="btn-start" href="#"></a>
@@ -22,9 +22,9 @@
                 <a class="button mode-run" id="btn-quick" href="#"></a>
                 <a class="button mode-run mode-error" id="btn-edit" href="#"></a>
                 <a class="button mode-run" id="btn-unmark" href="#"></a>
-                <span class="log"></span>
+                <span id="log"></span>
             </div>
-            <textarea class="wide-block mode-edit program" id="input-program"></textarea>
+            <textarea class="wide-block mode-edit program" id="input-program" tabindex="2"></textarea>
             <div class="wide-block mode-run mode-error program" id="display-program"></div>
         </div>
 	</body>
