Added link to the github

--- a/jstu4/help-ru.html
+++ b/jstu4/help-ru.html
@@ -19,6 +19,7 @@
             </p>
             <p>
                 &copy; Алексей Дубинин<br/>
+                Приложение доступно на github: <a href="https://github.com/lxyd/jstu4">https://github.com/lxyd/jstu4</a><br/>
                 Условия лицензионного соглашеия (лицензия MIT) см. в файле <a href="COPYING-RU">COPYING</a>
             </p>
             
