--- a/jstu4/help-en.html
+++ b/jstu4/help-en.html
@@ -18,6 +18,7 @@
             </p>
             <p>
                 &copy; Alexey Dubinin<br/>
+                Application is available on the github: <a href="https://github.com/lxyd/jstu4">https://github.com/lxyd/jstu4</a><br/>
                 This software is distributed under the terms of the MIT License. See <a href="COPYING-EN">COPYING</a> for details
             </p>
             
