--- a/jstu4/help-ru.html
+++ b/jstu4/help-ru.html
@@ -15,7 +15,7 @@
             <h2>О программе</h2>
             <p>
                 Данное учебное пособие предназначено для изучения алгоритмической модели "Машина Тьюринга".
-                Приложение представляет собой эмулятор программ МТ в четвёрках.
+                Приложение представляет собой интерпретатор программ МТ в четвёрках.
             </p>
             <p>
                 &copy; Алексей Дубинин<br/>
