--- a/jstu4/help-ru.html
+++ b/jstu4/help-ru.html
@@ -51,6 +51,10 @@
             </p>
 
             <p>Можно записывать несколько команд в строку, разделяя их одним или несколькими пробелами.</p>
+            <p>
+                В программу могут быть добавлены комментарии в стиле Си (//)  или shell (#). Обратите внимание: между предыдущей командой и коментарием должен стоять хотя бы один пробел или перенос строки.
+            </p>
+
             <p>Поддерживаются именованные состояния, но имена состояний, состоящие из одних цифр, считаются целыми числами (т.е. 01 и 1 - это одно и то же). Начальное состояние должно иметь имя 0.</p>
 
             <p>В процессе работы выполненые команды помечаются цветом. Сбросить пометки можно в любой момент нажав кнопку "Сбросить метки"</p>
@@ -60,7 +64,7 @@
             <p>Команды эмулятора:</p>
             <ul>
                 <li>"Старт" - разбирает программу и запускает её на выполнение;</li>
-                <li>"Быстро" - запустить программу в быстром, автоматическом режиме;</li>
+                <li>"Быстро" - запустить программу в быстром, автоматическом режиме. Повторный клик ещё ускоряет работу;</li>
                 <li>"Шаг" - выполнить следующий шаг, при необходимости выйдя из быстрого режима;</li>
                 <li>"Вернуться к правке" - вернуться к редактированию программы и ленты;</li>
                 <li>"В формат TU4" - преобразовать программу в формат эмулятора tu4 (все имена состояний заменить на шестнадцатеричные числа 0x00&nbsp;-&nbsp;0xFF).</li>
@@ -77,9 +81,9 @@
             <p>Пример (ненормированная замена 0 на 1 и наоборот):</p>
             <code>
                 00,&nbsp;,&lt;,rep<br/>
-                rep,0,1,mov&nbsp;&nbsp;rep,1,0,mov&nbsp;&nbsp;rep,&nbsp;,&gt;,fin<br/>
-                mov,0,&lt;,rep&nbsp;&nbsp;mov,1,&lt;,rep<br/>
-                fin,0,&gt;,fin&nbsp;&nbsp;fin,1,&gt;,fin&nbsp;&nbsp;fin,&nbsp;,#,fin
+                rep,0,1,mov&nbsp;&nbsp;rep,1,0,mov&nbsp;&nbsp;rep,&nbsp;,&gt;,fin&nbsp;&nbsp;# переписываем текущую ячейку<br/>
+                mov,0,&lt;,rep&nbsp;&nbsp;mov,1,&lt;,rep&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// двигаемся на шаг влево<br/>
+                fin,0,&gt;,fin&nbsp;&nbsp;fin,1,&gt;,fin&nbsp;&nbsp;fin,&nbsp;,#,fin&nbsp;&nbsp;# в конце работы перемещаемся в конец слова
             </code>
 
             <p>
