--- a/jstu4/jstu4.html
+++ b/jstu4/jstu4.html
@@ -24,6 +24,7 @@
                 <a class="button mode-run" id="btn-unmark" href="#"></a>
                 <span id="log"></span>
             </div>
+            <div id="stats">&nbsp;</div>
             <textarea class="wide-block mode-edit program" id="input-program" tabindex="2"></textarea>
             <div class="wide-block mode-run mode-error program" id="display-program"></div>
         </div>
