--- a/jstu4/jstu4.html
+++ b/jstu4/jstu4.html
@@ -6,6 +6,7 @@
         <script src="jquery-1.6.4.js"></script>
         <script src="jquery-plugins.js"></script>
         <script src="hotmilk.browser.jquery.js"></script>
+        <script src="save.js" type="text/javascript"></script>
         <script src="i18n.js"></script>
         <script src="tu4.js"></script>
         <script src="ui.js"></script>
