Added simple language changing.

--- a/jstu4/jstu4.html
+++ b/jstu4/jstu4.html
@@ -6,13 +6,18 @@
         <script src="jquery-1.6.4.js"></script>
         <script src="jquery-plugins.js"></script>
         <script src="hotmilk.browser.jquery.js"></script>
+        <script src="save.js"></script>
         <script src="i18n.js"></script>
         <script src="tu4.js"></script>
         <script src="ui.js"></script>
     </head>
     <body>
         <div class="wrapper">
-            <h1><span class="title"></span> <a class="button" id="btn-help" href="#"></a></h1>
+            <h1>
+                <span class="title"></span>
+                <a class="button" id="btn-help" href="#"></a>
+                <a class="button" id="btn-change-language" href="#"></a>
+            </h1>
             <input class="wide-block mode-edit mode-error tape" id="input-tape" tabindex="1"/>
             <div class="wide-block mode-run tape" id="display-tape"></div>
             <div class="controls">
